--- a/i3/config
+++ b/i3/config
@@ -323,13 +323,14 @@ for_window [instance="file-roller"] floating enable
 for_window [class="spotify"] floating enable
 for_window [title="^Preferenze$"] floating enable
 for_window [title="^Preferences$"] floating enable
-for_window [instance="Calendar" class="Icedove" title="New Event"] floating enable
+for_window [instance="Calendar" class="Thunderbird" title="New Event"] floating enable
 for_window [instance="^xsane"] floating enable
 
 
-for_window [class="^google-chrome$"] border none
-#for_window [class="^Icedove"] border none
-#for_window [class="^Iceweasel"] border none
+for_window [class="^google-chrome$"] border pixel 2
+for_window [class="^Terminator$"] border pixel 2
+for_window [class="^Thunderbird$"] border pixel 2
+for_window [class="^Firefox$"] border pixel 2
 
 assign [instance="Navigator"] $WS1
 assign [instance="Mail"] $WS0
