--- a/i3/config
+++ b/i3/config
@@ -325,6 +325,7 @@ for_window [title="^Preferenze$"] floating enable
 for_window [title="^Preferences$"] floating enable
 for_window [instance="Calendar" class="Thunderbird" title="New Event"] floating enable
 for_window [instance="^xsane"] floating enable
+for_window [class="^nm-connection-editor$"] floating enable
 
 
 for_window [class="^google-chrome$"] border pixel 2
