--- a/i3/config
+++ b/i3/config
@@ -331,7 +331,7 @@ for_window [class="^nm-connection-editor$"] floating enable
 for_window [class="^google-chrome$"] border pixel 2
 for_window [class="^Terminator$"] border pixel 2
 for_window [class="^Thunderbird$"] border pixel 2
-for_window [class="^Firefox$"] border pixel 2
+for_window [instance="^Navigator$"] border pixel 2
 
 assign [instance="Navigator"] $WS1
 assign [instance="Mail"] $WS0
