--- a/i3/config
+++ b/i3/config
@@ -330,7 +330,7 @@ for_window [class="^nm-connection-editor$"] floating enable
 
 for_window [class="^google-chrome$"] border pixel 2
 for_window [class="^Terminator$"] border pixel 2
-for_window [class="^Thunderbird$"] border pixel 2
+for_window [instance="^Mail$" class="^Thunderbird$"] border pixel 2
 for_window [instance="^Navigator$"] border pixel 2
 
 assign [instance="Navigator"] $WS1
