--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,14 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @yank_selection 'primary'
 
+# solves bug with not all selection being copied
+# see https://github.com/jwilm/alacritty/issues/1002
+set -g set-clipboard off
+
 set -g status-right '#{prefix_highlight} | %a %d-%m-%Y %H:%M'
+
+set -g default-terminal "screen-256color"
+
 
 set-window-option -g mouse on
 
