[tmux] disable sticky prefix for moving between panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,12 @@ set -g default-terminal "screen-256color"
 
 set-window-option -g mouse on
 
+# Make prefix not sticky for pane move keys
+bind-key Up select-pane -U
+bind-key Down select-pane -D
+bind-key Left select-pane -L
+bind-key Right select-pane -R
+
 # Number windows starting at 1, renumber as windows are added / removed
 set -g base-index 1
 setw -g pane-base-index 1
