[tmux] highlight current pane

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,8 @@ set -g status-right '#{prefix_highlight} | %a %d-%m-%Y %H:%M'
 
 set -g default-terminal "screen-256color"
 
+# highlight current window
+set-window-option -g window-status-current-bg colour7
 
 set-window-option -g mouse on
 
