--- a/i3/config
+++ b/i3/config
@@ -20,7 +20,7 @@ set $mod Mod4
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
-font pango:Inconsolata 10
+font pango:Hack 9
 
 
 # Before i3 v4.8, we used to recommend this one as the default:
@@ -308,7 +308,18 @@ mode "move" {
 bar {
 #        status_command i3status
 #	 status_command py3status -c ~/.i3/i3status.conf
-         status_command python3 ~/.i3/ipy3status.py
+#         status_command python3 ~/.i3/ipy3status.py
+          font pango:Hack, FontAwesome 9
+          status_command ~/bin/i3status-rs ~/.i3/config.toml
+    colors {
+        separator #666666
+        background #222222
+        statusline #dddddd
+        focused_workspace #0088CC #0088CC #ffffff
+        active_workspace #333333 #333333 #ffffff
+        inactive_workspace #333333 #333333 #888888
+        urgent_workspace #2f343a #900000 #ffffff
+    }
 }
 
 # touchpad
@@ -393,15 +404,11 @@ exec --no-startup-id nextcloud
 exec --no-startup-id pcmanfm -d
 exec --no-startup-id nm-applet
 exec --no-startup-id pasystray
-exec --no-startup-id tracker daemon -s
 exec --no-startup-id kupfer --no-splash
 
-exec --no-startup-id Telegram
-for_window [class="Telegram"] move scratchpad
-bindsym $mod+t [class="Telegram"] scratchpad show
 #exec --no-startup-id gnome-terminal --title="scratchpad-terminal" && xprop -name "scratchpad-terminal"  -f WM_CLASS 8ss -set WM_CLASS "scratchpad-terminal"
 #for_window [instance="scratchpad-terminal"] move scratchpad
-exec --no-startup-id terminator -T "scratchpad-terminal"
+#exec --no-startup-id terminator -T "scratchpad-terminal"
 #&& sleep 10 && xprop -name "scratchpad-terminal"  -f WM_CLASS 8ss -set WM_CLASS "scratchpad-terminal"
 for_window [title="scratchpad-terminal"] floating enable, move scratchpad, scratchpad show;
 for_window [title="scratchpad-terminal"] resize grow left 100, resize grow right 100, resize grow down 100, resize grow up 100, move scratchpad;
